# JiGeumDash

./: .gitignore  README.md  build.sh  run.sh
src/: CMakeLists.txt  game.c  game.h  main.c  main.h  util.c  util.h
